# mcpserver

./: README.md  main.py  pyproject.toml  requirements.txt
api/: index.py
