[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.2",
    "mcp>=1.12.4",
    "chromadb>=0.5.0",
    "langchain>=0.2.10",
    "langchain-community>=0.2.10",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.2.0",
]
